# bevyray

./: Cargo.toml  README.md
.cargo/: config.toml
assets/shaders/: const.wgsl  random.wgsl  raytrace.wgsl
src/: main.rs
src/raytracing/: extract.rs  mod.rs  pipeline.rs
