[package]
name = "bevyray"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
bevy-inspector-egui = "0.25"
bevy_flycam = "0.14"
bevy_mod_picking = { version = "0.20", default-features = false, features = [
    "backend_raycast",
    "selection",
] }
bevy_transform_gizmo = "0.12"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
