[package]
name = "bevyray"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
bevy-inspector-egui = "0.25"
bevy_flycam = "0.14"
bevy_mod_picking = { version = "0.20", default-features = false, features = [
    "backend_raycast",
    "selection",
] }
bevy_transform_gizmo = "0.12"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
